--- a/index/css/VIPPower.css
+++ b/index/css/VIPPower.css
@@ -1,7 +1,8 @@
 /*会员特权*/
 #top{
 	width: 100%;
-	height:28%;
+	/*height:28%;*/
+	height: 180px;
 }
 #top .top{
 	width: 100%;
@@ -34,7 +35,8 @@
 #top .topDetail{
 	width: 100%;
 	text-align: center;
-	margin-top:4%;
+	/*margin-top:4%;*/
+	margin-top: 7px;
 }
 #top .topDetail>a:first-child,#top .topDetail>a:last-child{
 	display: inline-block;
@@ -114,14 +116,16 @@
 .title{
 	width: 100%;
 	height: 36px;
-	/*text-align: center;*/
+	text-align: center;
 	line-height: 36px;
 	font-size: 13px;
 	position: relative;
 }
 .title span:first-child{
 	position: absolute;
-	left: 35%;
+	left: 0;
+	right: 0;
+	margin: 0 auto;
 }
 .vipNowPower .content{
 	width: 90%;
