--- a/index/css/VIPPower.css
+++ b/index/css/VIPPower.css
@@ -169,9 +169,11 @@
 	top:-8px;
 }
 .morePower{
-	float: right;
+	/*float: right;*/
 	color:#9A9A9A;
 	font-size: 12px;
+	position: absolute;
+	right: 0px;
 }
 .vipGift .content{
 	width: 90%;
