--- a/index/css/login.css
+++ b/index/css/login.css
@@ -19,7 +19,7 @@ body{
 #main .main{
 	text-align: center;
 	/*margin-top: 127px;*/
-	margin-top: 49%;
+	margin-top: 23%;
 }
 #main .main .userlogin>a{
 	display: inline-block;
@@ -27,6 +27,7 @@ body{
 #main .main .userlogin>a:first-child{
 	margin-right: 19px;
 }
+/*登录框*/
 #main .main .signIn{
 	width: 100%;
 	background-color: #fff;
@@ -34,12 +35,20 @@ body{
 	position: fixed;
 	bottom:0;
 	z-index: 99;
-	height: 32%;
+	height: 45%;
+	display: none;
 }
 .signIn .arrow{
 	position: absolute;
-	top:-14px;
-	left:25%;
+	/*top:-14px;
+	left:25%;*/
+	left: 0;
+	right: 0;
+	top:-10px;
+	margin: auto;
+}
+.signIn .inputOut{
+	margin-top: 12%;
 }
 .signIn .inputIn{
 	width: 60%;
@@ -47,6 +56,12 @@ body{
 	margin:0 auto;
 	margin-top:8px;
 	position: relative;
+}
+/*.signIn .inputOut{
+	display: none;
+}*/
+.signIn .resignOut{
+	display: none;
 }
 .signIn .inputIn .delete{
 	position: absolute;
@@ -57,11 +72,26 @@ body{
 	width:100%;
 	height: 40px;
 	line-height: 40px;
-	color: #ccc;
+	color: #000;
 	outline: none;
 	border:0px;
 	border-bottom: 1px solid #DFDFDF;
 	font-size: 12px;
+}
+.inputIn .userCode{
+	display: inline-block;
+	width: 65px;
+	height: 32px;
+	line-height: 32px;
+	text-align: center;
+	color: #fff;
+	border-radius: 7px;
+	background-color: #D3AD66;
+	position: absolute;
+	right: 0;
+	bottom:6px;
+	font-size:12px;
+	-webkit-transform:scale(0.8);
 }
 .signIn .isSure{
 	display: block;
@@ -74,6 +104,10 @@ body{
 	border:2px solid #DABC82;
 	border-radius: 16px;
 }
+.resignOut .isSure{
+	background-color: #D3AD66;
+	color:#fff;
+}
 .signIn .resign{
 	display: inline-block;
 	color: #999;
@@ -81,6 +115,87 @@ body{
 	text-decoration: underline;
 	margin-top: 8px;
 }
+/*错误提示*/
+.signIn .mask{
+	width: 100px;
+	height: 75px;
+	color: #fff;
+	background-color: #000;
+	opacity: 0.7;
+	border-radius: 10px;
+	z-index: 100;
+	font-size: 10px;
+	position: absolute;
+	left: 0;
+	right: 0;
+	margin:0 auto;
+	top: 22px;
+	display: none;
+}
+.signIn .mask>img{
+	margin:7px 0px 7px 0px;
+}
+
+/*注册框*/
+#main .main .signUp{
+	width: 100%;
+	background-color: #fff;
+	/*min-height: 200px;*/
+	position: fixed;
+	bottom:0;
+	z-index: 99;
+	height: 50%;
+	display: none;
+}
+.signUp .arrow{
+	position: absolute;
+	left: 0;
+	right: 0;
+	top:-10px;
+	margin: auto;
+}
+.signUp .inputIn{
+	width: 60%;
+	height: 40px;
+	margin:0 auto;
+	margin-top:8px;
+	position: relative;
+}
+.signUp .inputIn input{
+	width:100%;
+	height: 40px;
+	line-height: 40px;
+	color: #000;
+	outline: none;
+	border:0px;
+	border-bottom: 1px solid #DFDFDF;
+	font-size: 12px;
+}
+.signUp .isSure{
+	display: block;
+	width: 60%;
+	height: 34px;
+	line-height: 34px;
+	font-size: 17px;
+	margin:0 auto;
+	margin-top:15px;
+	border:2px solid #DABC82;
+	border-radius: 16px;
+}
+.signUp .inputIn .delete{
+	position: absolute;
+	right:0;
+	bottom:15px;
+} 
+.agreement{
+	margin-top: 11px;
+}
+.agreement>img{
+	vertical-align: middle;
+}
+
+
+
 /*登录注册方式*/
 #footer{
 	text-align: center;
