--- a/index/css/VIPPower.css
+++ b/index/css/VIPPower.css
@@ -363,6 +363,64 @@
 	font-size: 10px;
 	color:#999;
 }
+/*侧边栏按钮*/
+#navbtn{
+	display: inline-block;
+	width: 70px;
+	height: 54px;
+	line-height: 54px;
+	position: fixed;
+	left: 0;
+	top:80%;
+	background-color: #D3AD66;
+	border-top-right-radius: 54px;
+	border-bottom-right-radius: 54px;
+	text-align: center;
+}
+#navbtn>img{
+	vertical-align: middle;
+}
+.navmask{
+	position:fixed;
+	left:0;
+	right:0;
+	top:0;
+	bottom: 0;
+	background: rgba(0,0,0,0.7);
+	z-index: 999;
+	display: none;
+}
+.navselect{
+	height: 100%;
+	width: 50%;
+	background-color: #fff;
+	z-index: 1000;
+	position: fixed;
+	display: none;
+	left:0;
+	top:0;
+}
+.navselect>a{
+	display: inline-block;
+	width: 100%;
+	height: 54px;
+	line-height: 54px;
+	text-align: center;
+	/*background-color: #D3AD66;*/
+	color: #000;
+	font-size: 14px;
+	border-top-left-radius: 55px;
+	border-bottom-left-radius: 55px;
+	border-top:1px solid #E5E5E5;
+	border-bottom:1px solid #E5E5E5;
+}
+.navselect .active{
+	background-color: #D3AD66;
+	color:#fff;
+}
+.navselect>a:first-child{
+	margin-top: 35%;
+}
 /*媒体查询*/
 @media screen and (min-width:767px){
 	body{
