--- a/index/css/login.css
+++ b/index/css/login.css
@@ -35,7 +35,7 @@ body{
 	position: fixed;
 	bottom:0;
 	z-index: 99;
-	height: 45%;
+	height: 50%;
 	display: none;
 }
 .signIn .arrow{
@@ -78,7 +78,7 @@ body{
 	border-bottom: 1px solid #DFDFDF;
 	font-size: 12px;
 }
-.inputIn .userCode{
+.inputIn .resignCode,.inputIn .signupCode{
 	display: inline-block;
 	width: 65px;
 	height: 32px;
@@ -129,7 +129,7 @@ body{
 	left: 0;
 	right: 0;
 	margin:0 auto;
-	top: 22px;
+	top: 58px;
 	display: none;
 }
 .signIn .mask>img{
@@ -193,6 +193,35 @@ body{
 .agreement>img{
 	vertical-align: middle;
 }
+/*注册提示*/
+.signInsize .signupMask{
+	width: 200px;
+	height: 150px;
+	color: #fff;
+	background-color: #000;
+	opacity: 0.7;
+	border-radius: 10px;
+	z-index: 100;
+	font-size: 10px;
+	position: absolute;
+	left: 0;
+	right: 0;
+	margin:0 auto;
+	top: 32px;
+	display: none;
+}
+.signInsize .signupMask>img{
+	float: right;
+	margin:6px 5px 0px 0px;
+}
+.signInsize .signupMask>p:nth-child(2){
+	font-size: 14px;
+	margin-top: 27px;
+}
+.signInsize .signupMask>p:nth-child(3){
+	margin: 8px 0px 5px 0px;
+}
+
 
 
 
