--- a/index/css/myGroupBuy.css
+++ b/index/css/myGroupBuy.css
@@ -24,45 +24,6 @@
 	border:0px;
 	outline:none;
 }
-/*热门品牌*/
-#top .hotshop{
-	width: 100%;
-	height: 115px;
-	background-color: #fff;
-	margin-top:10px;
-	overflow: hidden;
-}
-.hotshop .hotbrand{
-	overflow: hidden;
-}
-.hotbrand .swiper-wrapper{
-	width: 1300px !important;
-	padding-left: 23px !important;
-}
-.hotbrand .swiper-wrapper .swiper-slide{
-	width: 4% !important;
-	height: 60px;
-	margin-right: 8px;
-}
-#top .hotshop p{
-	font-size: 16px;
-	margin-left: 22px;
-	margin-bottom:15px;
-	margin-top:8px;
-}
-#top .hotshop a{
-	display: inline-block;
-	width: 100%;
-	height:60px;
-	margin-right:13px;
-}
-#top .hotshop a:nth-child(2){
-	margin-left: 12px;
-}
-#top .hotshop a img{
-	width: 100%;
-	height:60px;
-}
 /*酒品分类*/
 #main .dirnkingOutsize{
 	width: 100%;
@@ -103,6 +64,7 @@
 #main .dirnkingOutsize .active{
 	background-color: #FCEFDB;
 }
+
 /*分类展示*/
 #main .dring_classfly{
 	width: 100%;
@@ -123,11 +85,11 @@
 	float: left;
 	margin: 12px 0px 0px 8px;
 }
-#main .dring_classfly a img:last-child{
+/*#main .dring_classfly a img:last-child{
 	width: 7%;
 	float: right;
 	margin:19px 18px 0px 0px;
-}
+}*/
 .classfly_introduce{
 	display: block;
 	float:left;
@@ -137,67 +99,6 @@
 	margin-bottom:5px;
 }
 
-/*底部导航*/
-/*#footer{
-	overflow: hidden;
-}*/
-/*.footnav{
-	width: 100%;
-	height: 64px;
-	background-color: #fff;
-	position: fixed;
-	z-index: 1000;
-	bottom: 0;
-}
-.footnav div{
-	width: 20%;
-	float:left;
-	text-align: center;
-}
-.footnav div img{
-	width: 40%;
-	margin-top: 5px;
-}
-.footnav .shequ{
-	width: 45%;
-}
-.footnav .shangcheng{
-	margin-top:6px;
-	width: 15%;
-}
-.footnav .shouye{
-	margin-top:10px;
-	width: 36%;
-}
-.footnav .meijiu{
-	margin-top:-3px;
-	width: 57%;
-}
-@media only screen and (min-device-width : 768px) and (max-device-width : 1024px){
-	.footnav{
-		height: 125px;
-	}
-	.footnav .shouye{
-		margin-top:17px; 
-	}
-	.footnav .meijiu{
-		margin-top:-11px;
-	}
-	.likeGuestOut{
-		margin-bottom: 138px;
-	}
-}
-@media only screen and (min-device-width : 1024px) and (max-device-width : 1366px){
-	.footnav{
-		height: 164px;
-	}
-	.footnav .meijiu{
-		margin-top:-18px;
-	}
-	.likeGuestOut{
-		margin-bottom: 169px;
-	}
-}*/
 
 .opacity{
         -webkit-animation: opacity 0.3s linear;
