--- a/index/css/shopDetail.css
+++ b/index/css/shopDetail.css
@@ -309,3 +309,64 @@
 	color: #fff;
 	font-size: 12px;
 }
+.footer>a:nth-child(2){
+	position: relative;
+}
+.footer>a .count{
+	display: inline-block;
+	width: 14px;
+	height: 14px;
+	line-height: 12px;
+	font-size: 12px;
+	border-radius: 50%;
+	text-align: center;
+	position: absolute;
+	top: -2px;
+	right: 28%;
+	background-color: red;
+	color: #fff;
+	-webkit-transform:scale(0.8);
+}
+/*积分弹出框*/
+.mask{
+	position:fixed;
+	left:0;
+	right:0;
+	top:0;
+	bottom: 0;
+	background: rgba(0,0,0,0.7);
+	z-index: 999;
+	display: none;
+}
+.mask>.motai{
+	width: 100%;
+	min-height: 420px;
+	background-color: #fff;
+	position: fixed;
+	bottom:0px;
+}
+.mask>.motai>p{
+	margin-top:15px;
+}
+.mask>.motai>p>img{
+	width: 30px;
+	height: 15px;
+	vertical-align: middle;
+	margin: 0 10px 0px 12px;
+}
+.mask>.motai>p>span{
+	font-size: 12px;
+	color: #4d4d4d;
+}
+.mask>.motai>a{
+	display: block;
+	width: 100%;
+	height: 46px;
+	line-height: 46px;
+	text-align: center;
+	background-color: #d3ac65;
+	color: #fff;
+	font-size: 15px;
+	position: fixed;
+	bottom: 0px;
+}
