--- a/index/css/shopcar.css
+++ b/index/css/shopcar.css
@@ -31,6 +31,13 @@
 .top .shopName>.getEdit>a{
     color:#4d4d4d;
 }
+.top .shopName>.collect{
+    width: 22px;
+    height: 22px;
+    vertical-align: middle;
+    margin-left:3px;
+    margin-top: -3px;
+}
 /*购物车商品*/
 .carbuy{
     width: 100%;
@@ -57,11 +64,6 @@
     font-size: 13px;
     margin-top: 10px;
     margin-right:4px;
-    /*height:34px;  
-    overflow: hidden;  
-     当字符串超过规定长度，显示省略符
-    text-overflow:ellipsis;  
-    white-space: nowrap;  */
 }
 .shopDetail>.shopprice{
     margin-top:26px;
@@ -79,6 +81,35 @@
     font-size: 12px;
     color:#4d4d4d;
     float: right;
+    margin-right:8px;
+}
+/*编辑商品数量*/
+.clickEdit{
+    height:100px;
+    line-height:100px;
+    text-align:center;
+    display: none;
+}
+.clickEdit>img{
+   width: 15px;
+   height: 15px;
+   vertical-align: middle;
+}
+.clickEdit>span:nth-child(2){
+    color:#4d4d4d;
+    margin-left:8%;
+    margin-right:8%;
+}
+.clickEdit>span:last-child{
+    display:inline-block;
+    width:16%;
+    height:100px;
+    background-color:#bf2020;
+    line-height:100px;
+    text-align:center;
+    color:#fff;
+    font-size:15px;
+    float:right;
     margin-right:8px;
 }
 /*购物车猜你喜欢*/
