--- a/index/css/makeSureOrder.css
+++ b/index/css/makeSureOrder.css
@@ -136,9 +136,9 @@
 	width:74%;
 	height: 28px;
 	line-height: 28px;
-	resize: none;
+	resize: none;/*去掉默认样式*/
 	white-space:nowrap;/*textarea不自动换行*/
-	overflow-x:hidden;/*隐藏横向滚动条*/
+	overflow-x:hidden;/*隐藏textarea横向滚动条*/
 	font-size: 12px;
 	border: 0px;
 }
@@ -239,4 +239,69 @@
 	color: #fff;
 	position: fixed;
 	bottom: 0;
+}
+/*运险费及弹出框*/
+.safeMask{
+	position: fixed;
+	top: 0;
+	bottom:0;
+	left: 0;
+	right: 0;
+	background: rgba(0,0,0,0.7);
+	z-index: 99;
+	display: none;
+}
+.safeMask>.safeway{
+	width: 100%;
+	height: 400px;
+	color: #4d4d4d;
+	background-color: #fff;
+	position: fixed;
+	bottom: 0;
+}
+.safeway>.safeTitle{
+	text-align: center;
+	font-size: 13px;
+	margin-top:12px;
+}
+.safeway>.safeOne{
+	width: 100%;
+	height: 30px;
+	line-height: 30px;
+	border-bottom:1px solid #ccc;
+}
+.safeOne>span{
+	font-size: 12px;
+	margin-left: 12px;
+}
+.safeOne .select{
+	width: 18px;
+	height: 18px;
+	float: right;
+	margin-right:12px;
+	margin-top:6px;
+}
+.decision{
+	display: block;
+	width: 100%;
+	height: 40px;
+	position: fixed;
+	bottom: 0;
+	font-size: 0px;
+}
+.decision>a{
+	display: inline-block;
+	width: 50%;
+	height: 40px;
+	line-height: 40px;
+	text-align: center;
+	font-size: 12px;
+}
+.decision>a:first-child{
+	color: #d3ac55;
+	background-color: #f3eee1;
+}
+.decision>a:last-child{
+	color: #fff;
+	background-color: #d3ac65;
 }
