--- a/index/css/orderDetail.css
+++ b/index/css/orderDetail.css
@@ -51,3 +51,224 @@
 	font-size: 12px;
 	color: #4d4d4d;
 }
+/*下单商品*/
+#main>.ordershop{
+	width: 100%;
+	background-color: #fff;
+	margin-top:9px;
+	overflow: hidden;
+}
+.ordershop>.shopName{
+	display: block;
+	width:100%;
+    min-height:40px;
+    line-height:40px;
+    color:#4d4d4d;
+    font-size:12px;
+}
+.ordershop>.shopName>.shopPic{
+	width:13px;
+    height:13px;
+    vertical-align:middle;
+    margin:0px 8px 0px 8px;
+}
+/*商品*/
+.ordershop>.goods{
+	display: block;
+	width: 100%;
+	min-height: 110px;
+}
+.goods>.picLeft{
+	float: left;
+    margin-right:23px;
+    width: 100px;
+    height:100px;
+    margin-left: 8px;
+    vertical-align: middle;
+}
+.goods>.goodsDetail{
+	display: inline-block;
+	width: 46%;
+}
+.goodsDetail>.shoptype{
+	display: block;
+	color:#4d4d4d;
+    font-size: 13px;
+    margin-top: 10px;
+    /*margin-right:4px;*/
+}
+.goodsDetail>span:last-child{
+	display: inline-block;
+	color: #999;
+	font-size: 12px;
+	margin-top:20px;
+}
+.goods>.price{
+	display: inline-block;	
+	vertical-align: top;
+	float: right;
+	margin-right: 5px;
+}
+.price>span{
+	display: block;
+	font-size: 12px;
+}
+.price>span:first-child{
+	margin-top: 9px;
+	font-size: 13px;
+}
+.price>span:nth-child(2){
+	margin-top: 5px;
+	color: #999;
+	text-decoration: line-through;
+}
+.price>span:last-child{
+	margin-top: 15px;
+	color: #999;
+}
+/*运费*/
+.fare{
+	width: 100%;
+	min-height: 51px;
+	background-color: #fff;
+	font-size: 12px;
+	color: #4d4d4d;
+	border-top: 1px solid #e6e6e6;
+	border-bottom: 1px solid #e6e6e6;
+	box-sizing: border-box;
+}
+.fare>p{
+	width: 100%;
+	height: 25px;
+	line-height: 25px;
+}
+.fare>p>span:first-child{
+	margin-left: 8px;
+}
+.fare>p>span:last-child{
+	float: right;
+	margin-right: 5px;
+}
+.fare .allfade{
+	color: #d3ac65;
+}
+/*联系供应商以及拨打电话*/
+.contact{
+	width: 100%;
+	height: 40px;
+	background-color: #fff;
+	font-size: 0px;
+}
+.contact>a{
+	display: inline-block;
+	width: 50%;
+	height: 30px;
+	line-height: 30px;
+	text-align: center;
+	font-size: 12px;
+	color: #4d4d4d;
+	margin-top: 5px;
+}
+.contact>a:first-child{
+	border-right: 1px solid #ccc;
+	box-sizing: border-box;
+}
+.contact>a>img{
+	width: 13px;
+	height: 13px;
+	vertical-align: middle;
+	margin-right:8px;
+}
+/*取消订单及付款*/
+#footer>.cancel{
+	width: 100%;
+	height: 40px;
+	line-height: 40px;
+	background-color:#fafafa; 
+	position: fixed;
+	bottom: 0;
+}
+.cancel>span{
+	float: right;
+	margin-right: 8px;
+}
+.cancel img{
+	width: 60px;
+	height: 20px;
+	vertical-align: middle;
+}
+.cancel img:first-child{
+	margin-right:4px;
+}
+/*点击付款出现遮罩层*/
+.mask{
+	position: fixed;
+	top: 0;
+	bottom:0;
+	left: 0;
+	right: 0;
+	background: rgba(0,0,0,0.7);
+	z-index: 99;
+	display: none;
+}
+.mask>.selectway{
+	width: 100%;
+	height: 400px;
+	color: #4d4d4d;
+	background-color: #fff;
+	position: fixed;
+	bottom: 0;
+}
+.selectway>.selectTitle{
+	text-align: center;
+	font-size: 13px;
+	margin-top:12px;
+}
+.selectway>.wayOne{
+	display: block;
+	width: 100%;
+	height: 50px;
+	line-height: 50px;
+	border-bottom:1px solid #ccc;
+	border-top: 1px solid #ccc;
+	margin-top: 12px;
+}
+.wayOne>img:first-child{
+	width: 30px;
+	height: 30px;
+	vertical-align: middle;
+	margin-left: 8px;
+}
+.wayOne>img:last-child{
+	width: 14px;
+	height: 8px;
+	vertical-align: middle;
+	float: right;
+	margin-right: 8px;
+	margin-top: 20px;
+}
+.wayOne .active{
+	display: none;
+}
+.wayOne>span{
+	font-size: 12px;
+	color: #4d4d4d;
+	margin-left: 8px;
+}
+.totalMoney{
+	text-align: center;
+	font-size: 17px;
+	color: #4d4d4d;
+	margin-top: 32px;
+}
+.makePay{
+	display: block;
+	width: 100%;
+	height: 40px;
+	line-height: 40px;
+	text-align: center;
+	background-color: #D3AC65;
+	color: #fff;
+	position: fixed;
+	bottom: 0;
+}
