--- a/index/css/orderDetail.css
+++ b/index/css/orderDetail.css
@@ -4,6 +4,7 @@
 	min-height: 90px;
 	overflow: hidden;
 	background-color: #fff;
+	position: relative;
 }
 .payMoney>p{
 	margin-left: 40px;
@@ -14,6 +15,14 @@
 .payMoney>p:first-child{
 	margin-top: 22px;
 	margin-bottom:10px;
+}
+.payMoney>img{
+	width: 98px;
+	height: 81px;
+	vertical-align: middle;
+	position: absolute;
+	top: 0;
+	right: 7%;
 }
 /*收货人信息*/
 #top>.receiver{
@@ -271,4 +280,67 @@
 	color: #fff;
 	position: fixed;
 	bottom: 0;
+}
+/*点击取消订单出现遮罩层*/
+.cancelMask{
+	position: fixed;
+	top: 0;
+	bottom:0;
+	left: 0;
+	right: 0;
+	background: rgba(0,0,0,0.7);
+	z-index: 99;
+	display: none;
+}
+.cancelMask>.cancelReason{
+ 	width: 70%;
+ 	min-height:280px;
+ 	background-color: #fff;
+ 	margin:0 auto;
+ 	margin-top: 150px;
+}
+.cancelReason>p{
+ 	width: 100%;
+ 	height: 40px;
+ 	line-height: 40px;
+	border-bottom:1px solid #ccc;
+	box-sizing: border-box;
+	font-size: 12px;
+	color: #4d4d4d;
+}
+.cancelReason>p:first-child{
+ 	color: #D3AD66;
+ 	text-align: center;
+ 	font-size: 13px;
+}
+.cancelReason>p>img{
+ 	width: 18px;
+ 	height: 18px;
+ 	vertical-align: middle;
+ 	float: right;
+ 	margin-top: 11px;
+ 	margin-right: 10px;
+}
+.cancelReason>p>span{
+	margin-left: 10px;
+}
+.cancelReason .makesure{
+	font-size: 0px;
+}
+.cancelReason .makesure>a{
+	display: inline-block;
+	width: 50%;
+	height: 40px;
+	line-height: 40px;
+	text-align: center;
+}
+.cancelReason .makesure>a:first-child{
+	font-size: 12px;
+	color: #D3AD66;
+	background-color: #F4EEE1;
+}
+.cancelReason .makesure>a:last-child{
+	font-size: 12px;
+	color: #fff;
+	background-color: #D3AD66;
 }
